package ua.lesson22.app.model;

public enum UserRole {

    ADMIN,
    REGULAR
}
